--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -31,6 +31,22 @@ Ecology workshop
     </table>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Day 3</h3>
+    <table class="table table-striped">
+      <tr>
+	<td>Before starting</td>
+	<td><a href="{{ site.dc_pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+      </tr>
+      <tr><td>Morning</td> <td> <a href="http://www.datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
+      <tr><td> </td><td><a href="http://www.datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>Afternoon</td><td><a href="http://www.datacarpentry.org/R-ecology-lesson/">Introduction to R</a></td></tr>
+      <tr> <td>Evening</td> <td>END</td> </tr>
+    </table>
+  </div>
+</div>
+
 
 
 <!--
