--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -11,7 +11,6 @@ Ecology workshop
       </tr>
       <tr><td>Morning</td> <td> <a href="http://www.datacarpentry.org/spreadsheet-ecology-lesson/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td>Afternoon</td><td><a href="http://www.datacarpentry.org/OpenRefine-ecology-lesson/">OpenRefine for Data Cleaning</a></td></tr>
-      <tr> <td>Evening</td> <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -21,7 +20,6 @@ Ecology workshop
       <tr><td>Afternoon</td> <td><a href="http://www.datacarpentry.org/R-ecology-lesson/">Continuation of R: Data analysis & Visualization</a></td></tr>    
             <tr>
 	<td> </td>
-	<td> END </td>
       </tr>
     </table>
   </div>
@@ -30,9 +28,9 @@ Ecology workshop
   <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
-  <tr> <td>Afternoon</td><td><a href="http://www.datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
+  <tr> <td>Morning</td><td><a href="http://www.datacarpentry.org/sql-ecology-lesson/">Data Management with SQL</a></td></tr>
       <tr>
-	<td>Evening</td>
+	<td>Afternoon</td>
 	<td><a href="{{ site.dc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
 
